--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <nav class="flex justify-between items-center px-6 py-4 bg-[#161b22] shadow-md">
     <h1 class="text-xl font-bold text-cyan-400">Rounak Dhadiwal</h1>
     <div class="space-x-6">
-      <a href="index.html" class="hover:text-cyan-400">Home</a>
-      <a href="resume.html" class="hover:text-cyan-400">Resume</a>
-      <a href="blogs.html" class="hover:text-cyan-400">Blogs & CTFs</a>
+      <a href="/xploiterd/index.html" class="hover:text-cyan-400">Home</a>
+      <a href="/xploiterd/resume.html" class="hover:text-cyan-400">Resume</a>
+      <a href="/xploiterd/blogs.html" class="hover:text-cyan-400">Blogs & CTFs</a>
     </div>
   </nav>
 
