--- a/resume.html
+++ b/resume.html
@@ -10,17 +10,17 @@
   <nav class="flex justify-between items-center px-6 py-4 bg-[#161b22] shadow-md">
     <h1 class="text-xl font-bold text-cyan-400">Rounak Dhadiwal</h1>
     <div class="space-x-6">
-      <a href="index.html" class="hover:text-cyan-400">Home</a>
-      <a href="resume.html" class="hover:text-cyan-400">Resume</a>
-      <a href="blogs.html" class="hover:text-cyan-400">Blogs & CTFs</a>
+      <a href="/xploiterd/index.html" class="hover:text-cyan-400">Home</a>
+      <a href="/xploiterd/resume.html" class="hover:text-cyan-400">Resume</a>
+      <a href="/xploiterd/blogs.html" class="hover:text-cyan-400">Blogs & CTFs</a>
     </div>
   </nav>
 
   <!-- Resume -->
   <section class="px-6 py-12 max-w-4xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-6">My Resume</h2>
-    <embed src="ROUNAK RESUME.pdf" type="application/pdf" width="100%" height="600px" class="mb-6 border rounded">
-    <a href="ROUNAK RESUME.pdf" download class="bg-cyan-500 text-black px-6 py-3 rounded-lg shadow hover:bg-cyan-400">Download Resume</a>
+    <embed src="/xploiterd/ROUNAK RESUME.pdf" type="application/pdf" width="100%" height="600px" class="mb-6 border rounded">
+    <a href="/xploiterd/ROUNAK RESUME.pdf" download class="bg-cyan-500 text-black px-6 py-3 rounded-lg shadow hover:bg-cyan-400">Download Resume</a>
   </section>
 </body>
 </html>
