--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>Rounak Dhadiwal | Portfolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="/xploiterd/scripts.js"></script>
 </head>
 <body class="bg-[#0d1117] text-gray-200 font-sans">
   <!-- Navbar -->
-  <nav class="flex justify-between items-center px-6 py-4 bg-[#161b22] shadow-md">
+  <nav class="flex justify-between items-center px-6 py-4 bg-[#161b22] shadow-md sticky top-0 z-50">
     <h1 class="text-xl font-bold text-cyan-400">Rounak Dhadiwal</h1>
     <div class="space-x-6">
       <a href="/xploiterd/index.html" class="hover:text-cyan-400">Home</a>
@@ -17,14 +18,43 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="flex flex-col items-center justify-center h-[80vh] text-center">
-    <h2 class="text-4xl font-bold mb-4">Hi, I'm <span class="text-cyan-400">Rounak Dhadiwal</span></h2>
-    <p class="mb-6 text-lg">Senior Security Engineer @ ZS<br>OSWE | eWPTXv2 | CRTP | AWS CCP</p>
-    <div class="flex space-x-6">
+  <section class="flex flex-col items-center justify-center h-[80vh] text-center px-6">
+    <h2 class="text-5xl font-extrabold mb-4 tracking-wide">
+      Hi, I’m <span class="text-cyan-400">Rounak Dhadiwal</span>
+    </h2>
+    <p class="mb-6 text-lg max-w-2xl">
+      Senior Security Engineer @ ZS • OSWE • eWPTXv2 • CRTP • AWS CCP  
+    </p>
+    <div class="flex space-x-6 mb-8">
       <a href="https://github.com/Rounak999" target="_blank" class="text-cyan-400 hover:underline">GitHub</a>
       <a href="https://www.linkedin.com/in/xploiterd/" target="_blank" class="text-cyan-400 hover:underline">LinkedIn</a>
       <a href="https://medium.com/@xploiterd" target="_blank" class="text-cyan-400 hover:underline">Medium</a>
     </div>
+    <a href="/xploiterd/resume.html" class="bg-cyan-500 text-black px-6 py-3 rounded-lg shadow-lg hover:bg-cyan-400 transition">
+      View My Resume
+    </a>
   </section>
+
+  <!-- Certifications -->
+  <section class="px-6 py-12 max-w-4xl mx-auto text-center">
+    <h3 class="text-3xl font-bold mb-6">Certifications</h3>
+    <div class="flex flex-wrap justify-center gap-4">
+      <span class="px-4 py-2 bg-[#161b22] rounded-lg shadow hover:shadow-cyan-500/40">OSWE</span>
+      <span class="px-4 py-2 bg-[#161b22] rounded-lg shadow hover:shadow-cyan-500/40">eWPTXv2</span>
+      <span class="px-4 py-2 bg-[#161b22] rounded-lg shadow hover:shadow-cyan-500/40">CRTP</span>
+      <span class="px-4 py-2 bg-[#161b22] rounded-lg shadow hover:shadow-cyan-500/40">AWS CCP</span>
+    </div>
+  </section>
+
+  <!-- Projects Highlight -->
+  <section class="px-6 py-12 max-w-6xl mx-auto">
+    <h3 class="text-3xl font-bold mb-6 text-center">Featured Projects</h3>
+    <div id="projects" class="grid md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-[#161b22] text-center py-6 mt-12">
+    <p class="text-gray-400">© 2025 Rounak Dhadiwal • Built with ❤️ on GitHub Pages</p>
+  </footer>
 </body>
 </html>
