Add Finder project link and details to index.html

--- a/index.html
+++ b/index.html
@@ -679,6 +679,22 @@
               </a>
             </li>
 
+            <li class="project-item  active">
+              <a href="https://github.com/Rounak999/Finder" target="_blank" rel="noopener">
+
+                <figure class="project-img">
+            
+
+                  <img src="./assets/images/finder.png" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Finder</h3>
+
+                <p class="project-category">SQL Injection and SSRF</p>
+
+              </a>
+            </li>
+
              <li class="project-item  active">
               <a href="https://github.com/Rounak999/lottery_app" target="_blank" rel="noopener">
 
